cmake_minimum_required(VERSION 3.22)

if(WIN32)
    set(CMAKE_ASM_NASM_OBJECT_FORMAT win32)
else()
    set(CMAKE_ASM_NASM_OBJECT_FORMAT elf32)
endif()
project(drweb_problems LANGUAGES C CXX ASM_NASM)

set(DRWEB_PROBLEM3 ON)
if(MSVC AND NOT CMAKE_SIZEOF_VOID_P EQUAL 4)
    set(DRWEB_PROBLEM3 OFF)
    message(STATUS "problem3 needs a 32-bit toolchain (cmake -A Win32), skipping it")
elseif(NOT MSVC)
    include(CheckCXXSourceCompiles)
    set(CMAKE_REQUIRED_FLAGS -m32)
    check_cxx_source_compiles("int main() { return 0; }" DRWEB_HAVE_M32)
    unset(CMAKE_REQUIRED_FLAGS)
    if(NOT DRWEB_HAVE_M32)
        set(DRWEB_PROBLEM3 OFF)
        message(STATUS "problem3 needs 32-bit multilib, skipping it")
    endif()
endif()

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(MSVC)
    string(REPLACE "/EHsc" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    set(DRWEB_WARNINGS /W4 /permissive-)
    set(DRWEB_NO_EXCEPTIONS /EHs-c- /GR- /D_HAS_EXCEPTIONS=0)
    set(DRWEB_EXCEPTIONS /EHsc)
else()
    set(DRWEB_WARNINGS -Wall -Wextra -Wshadow -Wconversion -pedantic-errors)
    set(DRWEB_NO_EXCEPTIONS -fno-exceptions -fno-rtti)
    set(DRWEB_M32 -m32)
endif()

if(DRWEB_SANITIZE)
    if(MSVC)
        set(DRWEB_SANITIZE_FLAGS /fsanitize=${DRWEB_SANITIZE} /Zi)
    else()
        set(DRWEB_SANITIZE_FLAGS -fsanitize=${DRWEB_SANITIZE} -g -fno-omit-frame-pointer)
    endif()
endif()

add_library(problem1 OBJECT problem1.cpp)
target_compile_options(problem1 PRIVATE ${DRWEB_WARNINGS} ${DRWEB_NO_EXCEPTIONS})

add_library(problem2 OBJECT problem2.cpp)
target_compile_options(problem2 PRIVATE ${DRWEB_WARNINGS} ${DRWEB_NO_EXCEPTIONS})

if(DRWEB_PROBLEM3)
    add_library(problem3 STATIC problem3.c problem3.asm)
    target_compile_options(problem3 PRIVATE "$<$<COMPILE_LANGUAGE:C>:${DRWEB_WARNINGS};${DRWEB_M32}>")
endif()

enable_testing()

add_library(catch2 STATIC third_party/catch2/catch_amalgamated.cpp)
target_include_directories(catch2 SYSTEM PUBLIC third_party/catch2)

if(DRWEB_EXCEPTIONS)
    target_compile_options(catch2 PRIVATE ${DRWEB_EXCEPTIONS})
endif()
if(DRWEB_SANITIZE)
    target_compile_options(catch2 PRIVATE ${DRWEB_SANITIZE_FLAGS})
endif()

function(drweb_add_test name)
    add_executable(${name} tests/${name}.cpp)
    target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    target_compile_options(${name} PRIVATE ${DRWEB_WARNINGS} ${DRWEB_EXCEPTIONS} ${DRWEB_SANITIZE_FLAGS})
    target_link_libraries(${name} PRIVATE catch2)
    if(DRWEB_SANITIZE)
        if(MSVC)
            target_link_options(${name} PRIVATE /DEBUG /INCREMENTAL:NO)
        else()
            target_link_options(${name} PRIVATE ${DRWEB_SANITIZE_FLAGS})
        endif()
    endif()
    add_test(NAME ${name} COMMAND ${name})
endfunction()

drweb_add_test(test_problem1)
drweb_add_test(test_problem2)

if(DRWEB_PROBLEM3)
    add_library(catch2_m32 STATIC third_party/catch2/catch_amalgamated.cpp)
    target_include_directories(catch2_m32 SYSTEM PUBLIC third_party/catch2)
    if(DRWEB_EXCEPTIONS)
        target_compile_options(catch2_m32 PRIVATE ${DRWEB_EXCEPTIONS})
    endif()

    add_executable(test_problem3 tests/test_problem3.cpp)
    target_include_directories(test_problem3 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
    target_compile_options(test_problem3 PRIVATE ${DRWEB_WARNINGS} ${DRWEB_EXCEPTIONS})
    target_link_libraries(test_problem3 PRIVATE catch2_m32 problem3)
    if(DRWEB_M32)
        target_compile_options(catch2_m32 PRIVATE ${DRWEB_M32})
        target_compile_options(test_problem3 PRIVATE ${DRWEB_M32})
        target_link_options(test_problem3 PRIVATE ${DRWEB_M32})
    endif()
    if(DRWEB_SANITIZE)
        target_compile_options(catch2_m32 PRIVATE ${DRWEB_SANITIZE_FLAGS})
        target_compile_options(test_problem3 PRIVATE ${DRWEB_SANITIZE_FLAGS})
        if(MSVC)
            target_link_options(test_problem3 PRIVATE /DEBUG /INCREMENTAL:NO)
        else()
            target_link_options(test_problem3 PRIVATE ${DRWEB_SANITIZE_FLAGS})
        endif()
    endif()
    add_test(NAME test_problem3 COMMAND test_problem3)
endif()
